--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
                 <div class="running__card">
                     <h1 class="running__card__title">JUST DO IT. SUNDAY.</h1>
                     <p class="running__card__text">Run every Sunday and see how long you can keep your streak alive. Fuel your run with exclusive Nike+ Run Club playlists on Apple Music.</p>
-                    <a href="#" class="learn__more">LEARN MORE</a>
-                </div>
+                    <div class="learn__box">
+                        <a href="#" class="learn__more"><span class="learn__more__span"></span>LEARN MORE</a>
+                    </div>
             </div>
         </section>
         <section class="sport">
