--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <nav class="header__nav">
                 <ul class="header__nav__items">
                     <li class="nav__list">
-                        <a href="#" class="nav__item">Home</a>
+                        <a href="#home" class="nav__item">Home</a>
                     </li>
                     <li class="nav__list">
-                        <a href="#" class="nav__item">About</a>
+                        <a href="#about" class="nav__item">About</a>
                     </li>
                     <li class="nav__list">
-                        <a href="#" class="nav__item">Offers</a>
+                        <a href="#offers" class="nav__item">Offers</a>
                     </li>
                     <li class="nav__list">
-                        <a href="#" class="nav__item">Services</a>
+                        <a href="#services" class="nav__item">Services</a>
                     </li>
                 </ul>
                 <form class="form__search">
@@ -37,7 +37,7 @@
         </div>
     </header>
     <main class="main">
-        <section class="freedom__section">
+        <section id="home" class="freedom__section">
             <div class="container freedom__section__container">
                 <div class="freedom__card">
                     <h1 class="freedom__title">Freedom calls.</h1>
@@ -47,7 +47,7 @@
             </div>
             
         </section>
-        <section class="running">
+        <section id="about" class="running">
             <div class="container running__conatiner">
                 <div class="running__card">
                     <h1 class="running__card__title">KNOW YOUR RUNS. IN AND OUT.</h1>
@@ -68,7 +68,7 @@
                     </div>
             </div>
         </section>
-        <section class="sport">
+        <section id="Offers" class="sport">
             <div class="container sport__container">
                 <div class="sport__card">
                     <h1 class="sport__title">Nike Sport Band.
@@ -80,7 +80,7 @@
                 <img class="sport__img" src="img/watch-in-hand.png" alt="">
             </div>
         </section>
-        <section class="health">
+        <section id="services" class="health">
             <div class="container health__container">
                 <div class="health__card">
                     <h1 class="health__title">Nike Sport Band.
