--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="#about" class="nav__item">About</a>
                     </li>
                     <li class="nav__list">
-                        <a href="#offers" class="nav__item">Offers</a>
+                        <a href="#Offers" class="nav__item">Offers</a>
                     </li>
                     <li class="nav__list">
                         <a href="#services" class="nav__item">Services</a>
